--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-PHP-REQL
+PHP-RETHINK-QL
 =======
 
 A PHP client driver for the RethinkDB query language (ReQL).
 
-PHP-RQL is licensed under the terms of the Apache License 2.0 http://www.apache.org/licenses/LICENSE-2.0
+PHP-RETHINK-QL is licensed under the terms of the Apache License 2.0 http://www.apache.org/licenses/LICENSE-2.0
 
-This library is written from scratch and re-used some parts of code from the php-rql library.
-
+This library uses some parts of code of the original PHP-RQL library of Daniel Mewes (https://github.com/danielmewes/php-rql).
+This code have stated the modified changes that can be found in the PHPDoc above those specific classes.
